--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts"
   },
   "dependencies": {
+    "@next/third-parties": "^14.2.14",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-hover-card": "^1.1.1",
@@ -31,7 +32,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "lucide-react": "^0.441.0",
-    "next": "14.2.5",
+    "next": "^14.2.14",
     "next-themes": "^0.3.0",
     "nextjs-toploader": "^3.6.15",
     "react": "^18",
