--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.13.2",
     "@cloudflare/workers-types": "^4.20240821.1",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/lodash": "^4.17.9",
     "@types/node": "^20",
     "@types/react": "^18",
