restructrue and add download page

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
     "eslint-plugin-next-on-pages"
   ],
   "rules": {
-     "@next/next/no-img-element": "off"
+     "@next/next/no-img-element": "off",
+    "react/no-unescaped-entities": 0
   }
 }
